# novk

./: .gitignore  Dockerfile  Pipfile  README.md  db.sqlite3  db_backup  docker-compose.yml  global_env  global_env.example  manage.py  pyproject.toml  requirements.txt
ansible/: hosts  local-deploy.yml  prod-deploy.yml
audio/: admin.py  ajax.py  forms.py  models.py  tests.py  urls.py  views.py  views.py.save
audio/migrations/: 0001_initial.py  0001_squashed_0013_song_uploaded.py  0002_auto_20180501_1520.py  0002_song.py  0003_auto_20170924_1246.py  0003_auto_20180729_1715.py  0004_auto_20180729_1718.py  0004_testsong.py  0005_auto_20171007_1238.py  0005_auto_20180729_1736.py  0006_auto_20171008_1439.py  0007_auto_20171015_0755.py  0008_auto_20171029_1841.py  0009_auto_20171029_1844.py  0010_auto_20171203_1626.py  0011_playlist.py  0012_auto_20180211_2128.py  0012_playlist_name.py  0013_song_uploaded.py
audio/templates/: music.html  upload.html  upload.html.save
diary/: admin.py  models.py
diary/migrations/: 0001_initial.py
dockerfiles/cherokee/: Dockerfile  cherokee.conf
dockerfiles/postgres/: Dockerfile  init.sql
dockerfiles/reflex/: Dockerfile
novk/: asgi.py  settings.py  urls.py  views.py  wsgi.py
pictures/: admin.py  models.py
reflex/: fabfile.py  pyproject.toml  rxconfig.py  upload.py
reflex/novk_reflex/: api.py  models.py  novk_reflex.py
rs/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  MANUAL.md  Makefile  README.md  docker-compose.yml
rs/config/: development.yaml  (+1 more)
templates/: Base.html
uwsgi/: start_options.yml
(+48 files in other folders)
