[tool.poetry]
name = "novk-reflex"
version = "0.1.0"
description = ""
authors = ["Eduard Gan <gan.ee@medsigroup.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.6.8"
psycopg2-binary = "^2.9.10"
python-jose = "^3.3.0"
fabric = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
